<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/fuelCalc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:focusableInTouchMode="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="26sp" />

                    <EditText
                        android:id="@+id/fwdTank"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/fwd"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gallons FWD Tank"
                        android:id="@+id/gallonsFwd"
                        android:textColor="#ff0009ff" />

                    <EditText
                        android:id="@+id/aftTank"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/aft"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gallons AFT Tank"
                        android:id="@+id/gallonsAft"
                        android:textColor="#ff0009ff"/>

                    <EditText
                        android:id="@+id/lazTank"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/laz"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gallons LAZ Tank"
                        android:id="@+id/gallonsLaz"
                        android:textColor="#ff0009ff"/>

                    <EditText
                        android:id="@+id/portWing"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/port"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gallons PORT Tank"
                        android:id="@+id/gallonsPort"
                        android:textColor="#ff0009ff"/>

                    <EditText
                        android:id="@+id/stbdWing"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/stbd"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gallons STBD Tank"
                        android:id="@+id/gallonsStbd"
                        android:textColor="#ff0009ff"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button"
                        android:id="@+id/calculate"
                        />

                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalGals"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/transfer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:measureWithLargestChild="true">

                    <EditText
                        android:id="@+id/transferFrom"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/transferFrom"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/transferOut" />

                    <EditText
                        android:id="@+id/currentAmountIn1"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/currentAmountIn"/>

                    <TextView
                        android:id="@+id/transferTo"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transferTo"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/transferIn" />

                    <EditText
                        android:id="@+id/currentAmountIn2"
                        android:inputType="number|numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/currentAmountIn"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button"
                        android:id="@+id/calculate2"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/afterXfer1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/afterXfer2"/>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
